Fixing alignment on header

--- a/style.css
+++ b/style.css
@@ -381,6 +381,7 @@ h5 {
     display: flex;
     flex-direction: row;
     justify-content: flex-end;
+    padding-top: 33px;
   }
 
   .header__nav--login a {
@@ -522,5 +523,15 @@ h5 {
 
   .header__nav {
     justify-content: space-between;
+  }
+
+  .main__menu-logo {
+    justify-content: none;
+    position: absolute;
+    margin-left: 57px;
+    top: 151px;
+  }
+  .main__menu-logo img {
+    height: auto;
   }
 }
